Implement workspaces instead of a single directory
